--- a/wiki/PlanningAuthoritiesD.wiki
+++ b/wiki/PlanningAuthoritiesD.wiki
@@ -2,7 +2,7 @@
 || || *Darlington* || Darlington Borough Council || Applications can be searched by validation date (whatever that is...) Weekly list also available. || http://www.darlington.gov.uk/eServices/PlanApps/PlanAppsViewer.aspx?SearchType=advanced ||
 || Done || Dartford || Dartford Borough Council || PublicAccess || || 
 || || Dartmoor || Dartmoor National Park Authority || weekly and monthly lists in html || http://www.dartmoor-npa.gov.uk/index/planning/pl-devcontrol/pl-searchapplicationregister/application_register.htm ||
-|| || *Daventry* || Daventry District Council || searchable by date ||  http://www.daventrydc.gov.uk/swiftlg/apas/run/wphappcriteria.display ||
+|| || *Daventry* || Daventry District Council || [SwiftLG] ||  http://www.daventrydc.gov.uk/swiftlg/apas/run/wphappcriteria.display ||
 || Done || Denbighshire || Denbighshire County Council|| ApplicationSearchServlet ||  http://planning.denbighshire.gov.uk/portal/servlets/ApplicationSearchServlet ||
 || Done (no postcodes) || Derby || Derby City Council || AcolNet ||  http://195.224.106.204/scripts/planningpages02/acolnetcgi.gov ||
 || || *Derbyshire* || Derbyshire County Council || only responsible for a small amount. all apps online ||  http://www.derbyshire.gov.uk/environment/planning/planning_applications/current_applications/ ||
@@ -12,7 +12,7 @@
 || Done || Doncaster || Doncaster Metropolitan Borough Council || PublicAccess || http://local.doncaster.gov.uk/PublicAccess/tdc/ ||
 || Broken || Dorset || Dorset County Council ||  AtriumePlanning || http://www.dorsetforyou.com/ePlanning/searchPageLoad.do ||
 || || *Dover* || Dover District Council || searchable by date received || http://www.dover.gov.uk/planning/Search_net/search.aspx ||
-|| || *Dudley* || Dudley Metropolitan Borough Council || searchable by some dates, and weekly lists || http://www2.dudley.gov.uk/swiftlg/apas/run/Wphappcriteria.display ||
+|| || *Dudley* || Dudley Metropolitan Borough Council || [SwiftLG] || http://www2.dudley.gov.uk/swiftlg/apas/run/Wphappcriteria.display ||
 || || *Dumfries and Galloway* || Dumfries and Galloway Council || weekly pdy lists separated into five areas || http://www.dumgal.gov.uk/dumgal/MiniWeb.aspx?id=91&menuid=1408&openid=1102 ||
 || Done || Dundee || Dundee City Council || PublicAccess || ||
 || In Progress || *Durham* || Durham City Council || PublicAccess - database appears to be empty || ||
