--- a/wiki/PlanningAuthoritiesS.wiki
+++ b/wiki/PlanningAuthoritiesS.wiki
@@ -13,8 +13,8 @@
 || || *Shetland Islands Council* || Lerwick || list as html, can show last 2 weeks, month, etc || http://www.shetland.gov.uk/planningcontrol/apps/ ||
 || In Progress || *Shrewsbury & Atcham Borough Council* || Shrewsbury || PlanningExplorer || http://www2.shrewsbury.gov.uk/MVM/Online/PL/GeneralSearch.aspx ||
 || || *Shropshire County Council* || Shrewsbury || searchable by date (minerals and waste only) || http://planning.shropshire.gov.uk/PlanAppSrch.asp ||
-|| || *Slough Borough Council* || Slough || requires registration! || http://www2.slough.gov.uk/swiftlg/apas/run/wphappcriteria.display ||
-|| || *Snowdonia National Park Authority* || Penrhynduedraeth || searchable by date || http://www.eryri-npa.co.uk/swiftlg_test/apas_test/run/wphappcriteria.display ||
+|| || *Slough Borough Council* || Slough || [SwiftLG] requires registration! || http://www2.slough.gov.uk/swiftlg/apas/run/wphappcriteria.display ||
+|| || *Snowdonia National Park Authority* || Penrhynduedraeth || [SwiftLG] || http://www.eryri-npa.co.uk/swiftlg_test/apas_test/run/wphappcriteria.display ||
 || || *Solihull Metropolitan Borough Council* || Solihull || weekly lists in html || http://www.solihull.gov.uk/planning/dc/weeklist.asp ||
 || Broken || *Somerset County Council* || Taunton || AtriumePlanning || http://webapp1.somerset.gov.uk/ePlanning/searchPageLoad.do ||
 || || *South Ayrshire Council* || Ayr || searchable by date || http://gis.south-ayrshire.gov.uk/viewerplanning/planningLists.asp ||
@@ -40,7 +40,7 @@
 || || *Southend-on-Sea Borough Council* || Southend-on-Sea || searchable by date || http://www.southend.gov.uk/environment/planning/applications.asp ||
 || In progress || *Southwark Borough Council* || London || AcolNet, but not quite as expected || http://194.168.41.26/cgi-bin/acolnetcgi.exe?ACTION=UNWRAP&RIPSESSION=%7B%5B%2A%211D1A020B050304731D3C3D31617C041E28361620222F34223B7660001036350A0C1E372B316B730B033D3916212F332D27013722002F352B6A611715232B122B2E21312D162B260A2E2737691120283F3A3606243629243A06176F747D7A707F7E647777007A76787F63%21%2A%5D%7D ||
 || Done || Spelthorne Borough Council || Staines || PublicAccess || http://phoenix.spelthorne.gov.uk/publicaccess/ ||
-|| || *St Edmundsbury Borough Council* || Bury St Edmunds || searchable by date || http://www.stedmundsbury.gov.uk/swiftlg/apas/run/wphappcriteria.display ||
+|| || *St Edmundsbury Borough Council* || Bury St Edmunds || [SwiftLG] || http://www.stedmundsbury.gov.uk/swiftlg/apas/run/wphappcriteria.display ||
 || Done || St Helens Council || St Helens || ApplicationSearchServlet || http://212.248.225.150:8080/portal/servlets/ApplicationSearchServlet ||
 || || *St. Albans District Council* || St Albans || searchable by date || http://www.stalbans.gov.uk/living/planning/search-plans.php ||
 || Done || Stafford Borough Council || Stafford || PublicAccess || http://www3.staffordbc.gov.uk/publicaccess/default.aspx ||
