--- a/wiki/SwiftLG.wiki
+++ b/wiki/SwiftLG.wiki
@@ -2,7 +2,7 @@ Sites that look like East Hertfordshire (urls contain "wphappcriteria"):
 
 We now have a python parser for these (as well as parsers in PHP for East Herts and Islington).
 
-Daventry and Macclesfield are currently not responding, so we'll have to do them later.
+Daventry is currently not responding, so we'll have to do them later.
 
     * Daventry (currently not responding)
     * Dudley
@@ -10,7 +10,7 @@ Daventry and Macclesfield are currently not responding, so we'll have to do them
     * Gwynedd
     * Islington
     * Lake District National Park
-    * Macclesfield (currently not responding)
+    * Macclesfield (slow to respond in browser, but fine in the script.)
     * Maidstone
     * Mole Valley
     * Pembrokeshire County Council
